--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongo": "^0.1.0",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
+    "mustache": "^2.1.3",
     "serve-favicon": "~2.3.0"
   }
 }
